ola-parser/src/testdata/syntaxTests/parsing/assembly_invalid_type.sol
contract C {
  fn f() public pure {
    assembly "failasm" {}
  }
}
// ----
// ParserError 4531: (55-64): Only "evmasm" supported.
